Creacion de los JFrame para la UI.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=IDE_jasmoStudio
+application.vendor=Alejandro
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,17 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/IDE_jasmoStudio.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.AutoComplete.jar=lib/AutoComplete.jar
+file.reference.RSTAUI.jar=lib/RSTAUI.jar
+file.reference.RSyntaxTextArea.jar=lib/RSyntaxTextArea.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.AutoComplete.jar}:\
+    ${file.reference.RSTAUI.jar}:\
+    ${file.reference.RSyntaxTextArea.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
